--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Add this CSS to your stylesheet */
+.custom-heading {
+  font-family: var(--font-permanent-marker), sans-serif;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.custom-para1{
+  font-family: var(--font-roboto-condensed), sans-serif;
+  
+  font-style: normal;
 }
