--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,43 @@
   
   font-style: normal;
 }
+
+.rubik-distressed {
+  font-family: var(--font-rubik-distressed), sans-serif;
+}
+
+.luckiest-guy {
+  font-family: var(--font-luckiest-guy), sans-serif;
+}
+.sour-gummy {
+  font-family: var(--font-sour-gummy), sans-serif;
+}
+.poppins {
+  font-family: var(--font-poppins), sans-serif;
+}
+.nunito{
+  font-family: var(--font-nunito), sans-serif;
+}s
+.linespacing{
+  line-height: 1.5;
+}
+/* 3D Shapes Container */
+@keyframes border-gradient {
+  0% {
+    border-image: linear-gradient(45deg, #8b5cf6, #ec4899, #ef4444) 1;
+  }
+  50% {
+    border-image: linear-gradient(45deg, #ec4899, #ef4444, #8b5cf6) 1;
+  }
+  100% {
+    border-image: linear-gradient(45deg, #ef4444, #8b5cf6, #ec4899) 1;
+  }
+}
+
+.animate-border-gradient {
+  border-width: 4px;
+  border-style: solid;
+  animation: border-gradient 3s infinite linear;
+  border-radius:initial;
+  border-radius: 10px;
+}
